# c4-genai-suite

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DEVELOPERS.md  EVAL_INTEGRATION_PLAN.md  dev-start-tmux.sh  dev-start.sh  docker-compose.dev.yml  package-lock.json  package.json
services/eval/: .env.example  .gitignore  Dockerfile  README.md  eval-dev-spec.json  generate_openapi.py  pyproject.toml
services/eval/llm_eval/: alembic.ini  db.py  exception_handlers.py  main.py  responses.py  schemas.py  settings.py  tasks.py
services/eval/llm_eval/alembic/: README.md  env.py
services/eval/llm_eval/alembic/versions/: e257b001fc6c_initial_migration.py
services/eval/llm_eval/auth/: user_principal.py
services/eval/llm_eval/config/: paths.py
services/eval/llm_eval/dashboard/: router.py
services/eval/llm_eval/dashboard/logic/: get_dashboard_data.py
services/eval/llm_eval/database/: migration.py  model.py
services/eval/llm_eval/eval/: router.py
services/eval/llm_eval/eval/evaluate_results/: router.py
services/eval/llm_eval/eval/evaluate_results/db/: find_grouped_results.py  find_metric_success_by_grouping_key.py  find_test_case.py  stream_evaluation_results.py  update_test_case_status.py
services/eval/llm_eval/eval/evaluate_results/logic/: get_grouped_results.py
services/eval/llm_eval/eval/evaluations/: models.py  router.py
services/eval/llm_eval/eval/evaluations/db/: count_evaluations.py  find_evaluation.py  update_evaluation_status.py
services/eval/llm_eval/eval/evaluations/logic/: delete_evaluation.py  find_evaluation_detail_summary.py  run_evaluation_by_qa_catalog.py  run_evaluation_by_test_cases.py  update_evaluation.py
services/eval/llm_eval/eval/evaluations/tasks/: complete_evaluation_task.py  evaluate_test_case_task.py  handle_evaluation_error_task.py  handle_test_case_error_task.py  (+2 more)
services/eval/llm_eval/file_store/: __init__.py  filestore_adapter.py  filestore_provider.py  s3_adapter.py
services/eval/llm_eval/llm_endpoints/: router.py
services/eval/llm_eval/llm_endpoints/db/: find_llm_endpoint.py
services/eval/llm_eval/llm_endpoints/logic/: create_llm_endpoint.py  delete_llm_endpoint.py  update_llm_endpoint.py
services/eval/llm_eval/llm_endpoints/plugins/: api_models.py  factory.py  interface.py
services/eval/llm_eval/llm_query/: c4_query.py  chat_model_query.py  interface.py
services/eval/llm_eval/metrics/: router.py
services/eval/llm_eval/metrics/db/: find_metric.py
services/eval/llm_eval/metrics/logic/: create_metric.py  delete_metric.py  update_metric.py
services/eval/llm_eval/metrics/plugins/: api_models.py  factory.py  interface.py  utils.py
services/eval/llm_eval/qa_catalog/: graph_utils.py  models.py  router.py  synthetic_qa_pair.py
services/eval/llm_eval/qa_catalog/db/: count_qa_catalogs.py  count_qa_pairs.py  crud_data_source_config.py  delete_qa_catalog.py  find_qa_catalog.py  find_qa_catalog_by_group.py  find_qa_catalog_preview.py  find_qa_catalog_previews.py  find_qa_catalog_version_history.py  find_qa_pairs.py  insert_qa_catalog.py  stream_qa_pairs.py  update_qa_catalog.py
services/eval/llm_eval/qa_catalog/generator/: interface.py
services/eval/llm_eval/qa_catalog/logic/: create_qa_catalog.py  crud_qa_catalog_from_file.py  download.py  generation.py  revision_history.py  upload.py  utils.py
services/eval/llm_eval/qa_catalog/tasks/: handle_generate_catalog_task.py
services/eval/llm_eval/utils/: api.py  byte_encoding.py  data_dir.py  decorators.py  deepeval_llm.py  encrypter.py  env.py  io.py  json_types.py  mixed_document_loader.py  save_file.py  ssl.py  task.py
services/eval/llm_eval/utils/model_settings/: azure_ai_model_settings.py  model_settings.py
services/eval/tests/: conftest.py
services/eval/tests/integration/backend/: conftest.py
services/eval/tests/test_data/: csv_tests.csv  csv_tests_missing_fields.csv  csv_tests_missing_fields_question.csv  excel_tests.xlsx  json_tests.json
services/eval/tests/unit/backend/: test_main.py
services/eval/tests/unit/database/: test_model.py
services/eval/tests/unit/qa_catalog/: test_graph_utils.py  test_synthetic_qa_pair.py
services/eval/tests/unit/utils/: test_byte_encoding.py  test_decorators.py  test_encrypter.py  test_mixed_document_loader.py  test_save_file.py
services/reis/: Dockerfile  README.md  pyproject.toml
(+271 files in other folders)
