[project]
name = "REI-S"
version = "0.1.0"
description = ""
authors = [{name = "Patrick Reichmann", email = "patrick.reichmann@codecentric.de"}]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12.0,<4.0"
dependencies = [
    "pydantic==2.12.3",
    "pydantic-settings>=2.11.0",
    "langchain-core==0.3.79",
    "langchain-community==0.3.31",
    "langchain-openai==0.3.35",
    "langchain-postgres==0.0.16",
    "psycopg[binary]>=3.2.12",
    "fastapi[standard]==0.120.2",
    "azure-search-documents==11.6.0",
    "azure-identity==1.25.1",
    "pdfminer-six>=20250506",
    "pypdf>=6.1.3",
    "ffmpeg-python>=0.2.0",
    "python-oxmsg>=0.0.2",
    "aiofiles>=25.1.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "fastmcp>=2.13.0",
    "langchain-ollama>=0.3.10",
    "langchain-aws>=0.2.35",
    "langchain-nvidia-ai-endpoints>=0.3.18",
    "boto3>=1.40.61",
    "boto3-stubs[s3]>=1.40.61",
    "weasyprint>=66.0",
    "markdown>=3.9",
    "pygments>=2.19.2",
    "orjson>=3.11.4",
]

[dependency-groups]
dev = [
    "ruff==0.14.2",
    "mypy==1.18.2",
    "pip==25.3",
    "pre-commit==4.3.0",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "pytest-responses==0.5.1",
    "pytest-github-report==0.0.1",
    "pytest-error-for-skips==2.0.2",
    "faker==37.12.0",
    "responses==0.25.8",
]

[project.scripts]
generate-api-spec = "rei_s.generate_open_api:generate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "def __repr__",
    ]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "N", "A", "B"]

[tool.mypy]
strict = true
install_types = true
non_interactive = true
ignore_missing_imports = true
exclude = [
    ".cache",
    ]
